Closed Bug 226781 Opened 22 years ago Closed 21 years ago

[gtk2] widgets need not be realized to obtain system fonts

Categories

(Core Graveyard :: GFX: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bryner, Assigned: bryner)

Details

Attachments

(1 file)

Currently, nsSystemFontsGTK realizes each of the widgets it creates before getting its font style. This is not necessary -- the font style is computed well before needing to realize the widget.
Attached patch patchSplinter Review
Just call gtk_widget_ensure_style().
Attachment #136321 - Flags: superreview?(dbaron)
Attachment #136321 - Flags: review?(blizzard)
Attachment #136321 - Flags: superreview?(dbaron) → superreview+
Attachment #136321 - Flags: review?(blizzard) → review+
checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: