We don't need to realize our temporary widgets to obtain the system font for them.  Just call gtk_widget_ensure_style instead.  Bug 226781, r=blizzard, sr=dbaron.